fixing some layout issues

--- a/assets/styles/pages/dashboard.less
+++ b/assets/styles/pages/dashboard.less
@@ -80,9 +80,6 @@
             margin-bottom: 20px;
         }
         .reply {
-            .card-title {
-                color: @brand-orange;
-            }
             .btn {
                 margin-top: 20px;
             }
@@ -112,7 +109,6 @@
             text-transform: uppercase;
         }
         span {
-            color: @brand-orange;
             font-weight: 600;
         }
     }
@@ -163,7 +159,6 @@
             border: 0;
             padding-bottom: 0;
             .modal-title {
-                color: @brand-orange;
                 font-weight: 600;
                 margin-top: 20px;
                 text-align: center;
@@ -201,12 +196,22 @@
         }
         .sidebar-feedback {
             a {
-                background: url('../imgs/icon-bike-orange.png') no-repeat top center;
+                background: url('../imgs/ico-bike-orange.png') no-repeat top center;
+            }
+            span {
+                color: @brand-orange;
             }
         }
         .alert {
             &.bubble {
                 background-color: @brand-orange;
+            }
+        }
+        .dashboard-content {
+            .reply {
+                .card-title {
+                    color: @brand-orange;
+                }
             }
         }
         .card-subtitle {
@@ -217,6 +222,13 @@
                 color: @brand-orange;
             }
         }
+        .finish-request-modal {
+            .modal-header {
+                .modal-title {
+                    color: @brand-orange;
+                }
+            }
+        }
     }
     &.bikeangel {
         .profile {
@@ -224,12 +236,22 @@
         }
         .sidebar-feedback {
             a {
-                background: url('../imgs/icon-bike-blue.png') no-repeat top center;
+                background: url('../imgs/ico-bike-blue.png') no-repeat top center;
+            }
+            span {
+                color: @brand-blue;
             }
         }
         .alert {
             &.bubble {
                 background-color: @brand-blue;
+            }
+        }
+        .dashboard-content {
+            .reply {
+                .card-title {
+                    color: @brand-blue;
+                }
             }
         }
         .card-subtitle {
@@ -238,6 +260,13 @@
         .card-footer {
             .see-more-link {
                 color: @brand-blue;
+            }
+        }
+        .finish-request-modal {
+            .modal-header {
+                .modal-title {
+                    color: @brand-blue;
+                }
             }
         }
     }
